[Fix] Switch to JDK 21 on spark instance (it is not compatible with 25)
Fix JDK module open config.